syntax = "proto3";

package com.example.internalapi.request.reservation.get_all_by_user_id.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/reservation.proto";

message GetAllReservationsByUserIdRequest {
  string user_id = 1;
}

message GetAllReservationsByUserIdResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.ReservationList reservations = 1;
  }
}
